--- a/quiz.html
+++ b/quiz.html
@@ -29,7 +29,7 @@
 
     <label for=""><input type="radio" name="question2"  value="acute"/>acute</label>
     <label for=""><input type="radio" name="question2" value="obtuse"/>obtuse</label>
-    <label for=""><input type="radio" name="question2" value="right angle"/>right angle</label>
+    <label for=""><input type="radio" name="question2" value="right angled"/>right angled</label>
 
     <!-- name should be the same in order to toggle(select only one option) -->
 
@@ -41,6 +41,8 @@
 <button id="submit-button">Submit</button>
 
 <h3 id="score-display"></h3>
+
+<script src="quiz.js"></script>
 </body>
 
 </html>
