--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     
 
     <label for="angle1"> Angle 1</label>
-    <input class="angle" type="number"/>
+    <input class="angle" type="text"/>
 
     <label for="angle2"> Angle 2 </label>
-    <input class="angle" type="number" />
+    <input class="angle" type="text" />
 
     <label for="angle3"> Angle 3</label>
-    <input class="angle" type="number" />
+    <input class="angle" type="text" />
 
     <button id="check-button"> Check </button>
 
