--- a/areaoftriangle.html
+++ b/areaoftriangle.html
@@ -7,8 +7,30 @@
     <title>Area of triangle</title>
 </head>
 <body>
+
+    <nav>
+<h2>The Complete Triangle App</h2>
+
+        <a href="index.html">Is It A Triangle? </a>
+        <a href="quiz.html">Triangle Quiz </a>
+        <a href="hypotenuse.html">Hypotenuse Of Triangle</a>
+        <a href="areaoftriangle.html" style="font-weight: bolder;">Area Of Triangle </a>
+        
+         </nav>
+
     <h1>Area Of Triangle</h1>
 
+    <label for="">Base(in cm)</label>
+    <input type="text" class="area-input" />
 
+    <label for=""> Height(in cm) </label>
+    <input type="text" class="area-input" />
+
+    <button id="calculate-btn"> Calculate </button>
+
+    <h2 id="output-display"> </h2>
+
+
+    <script src="areaoftriangle.js"></script>
 </body>
 </html>
