--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun With Triangles</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
+ <nav>
+    <h1> <u> The </u>  <u> Complete</u> <u>Triangle App</u></h1>
+    <br>
+<a style="font-weight: bolder;" href="index.html">Is It A Triangle? </a>
+<a href="quiz.html">Triangle Quiz </a>
+<a href="hypotenuse.html">Hypotenuse Of Triangle</a>
+<a href="areaoftriangle.html">Area Of Triangle </a>
+
+ </nav>
     <h1>Is It A Triangle?</h1>
     
 
