--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -7,6 +7,14 @@
     <title>Hypotenuse</title>
 </head>
 <body>
+
+    <nav>
+        <a href="index.html">Is It A Triangle? </a>
+        <a href="quiz.html">Triangle Quiz </a>
+        <a href="hypotenuse.html" style="font-weight: bolder;">Hypotenuse Of Triangle</a>
+        <a href="areaoftriangle.html">Area Of Triangle </a>
+        
+         </nav>
     
 <h1>Hypotenuse Of Triangle</h1>
 
