--- a/quiz.html
+++ b/quiz.html
@@ -6,9 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+   
 </head>
 
 <body>
+
+    <nav>
+        <a href="index.html">Is It A Triangle? </a>
+        <a href="quiz.html" style="font-weight: bolder;">Triangle Quiz </a>
+        <a href="hypotenuse.html">Hypotenuse Of Triangle</a>
+        <a href="areaoftriangle.html">Area Of Triangle </a>
+        
+         </nav>
+
     <h1>Triangle Quiz</h1>
 
     <label for="user-name" >Please Enter Your Name</label>
