--- a/quiz.html
+++ b/quiz.html
@@ -12,12 +12,14 @@
 <body>
 
     <nav>
-        <a href="index.html">Is It A Triangle? </a>
-        <a href="quiz.html" style="font-weight: bolder;">Triangle Quiz </a>
-        <a href="hypotenuse.html">Hypotenuse Of Triangle</a>
-        <a href="areaoftriangle.html">Area Of Triangle </a>
-        
-         </nav>
+        <h1 class="heading">  The  Complete Triangle App</h1>
+        <br>
+    <a style="font-weight: bolder;" href="index.html">Is It A Triangle? </a>
+    <a href="quiz.html">T-Quiz </a>
+    <a href="hypotenuse.html">T-Hypotenuse</a>
+    <a href="areaoftriangle.html">T-Area </a>
+    
+     </nav>
 
     <h1>Triangle Quiz</h1>
 
