--- a/areaoftriangle.html
+++ b/areaoftriangle.html
@@ -9,14 +9,14 @@
 <body>
 
     <nav>
-<h2>The Complete Triangle App</h2>
-
-        <a href="index.html">Is It A Triangle? </a>
-        <a href="quiz.html">Triangle Quiz </a>
-        <a href="hypotenuse.html">Hypotenuse Of Triangle</a>
-        <a href="areaoftriangle.html" style="font-weight: bolder;">Area Of Triangle </a>
-        
-         </nav>
+        <h1 class="heading">  The  Complete Triangle App</h1>
+        <br>
+    <a style="font-weight: bolder;" href="index.html">Is It A Triangle? </a>
+    <a href="quiz.html">T-Quiz </a>
+    <a href="hypotenuse.html">T-Hypotenuse</a>
+    <a href="areaoftriangle.html">T-Area </a>
+    
+     </nav>
 
     <h1>Area Of Triangle</h1>
 
