--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <nav>
-    <h1 class="heading">  The  Complete Triangle App</h1>
+    <h1 id="heading">  The  Complete Triangle App</h1>
     <br>
 <a style="font-weight: bolder;" href="index.html">Is It A Triangle? </a>
 <a href="quiz.html">T-Quiz </a>
@@ -18,7 +18,7 @@
 
  </nav>
     <h1 class="sub-heading" >Is It A Triangle?</h1>
-    
+   
 <div class="input-body">
 
 <div class="angle-input">
@@ -35,7 +35,7 @@
 </div>
     <button id="check-button"> Check </button>
 
-    <h3 id="output"> </h3>
+    <h2 id="output"> </h2>
 
 </div>
     <script src="app.js"></script>
