--- a/quiz.html
+++ b/quiz.html
@@ -14,19 +14,21 @@
 <body>
 
     <nav>
-        <h1 class="heading">  The  Complete Triangle App</h1>
+        <h1 id="heading">  The  Complete Triangle App</h1>
         <br>
-    <a style="font-weight: bolder;" href="index.html">Is It A Triangle? </a>
-    <a href="quiz.html">T-Quiz </a>
+    <a  href="index.html">Is It A Triangle? </a>
+    <a style="font-weight: bolder;" href="quiz.html">T-Quiz </a>
     <a href="hypotenuse.html">T-Hypotenuse</a>
     <a href="areaoftriangle.html">T-Area </a>
     
      </nav>
 
     <h1>Triangle Quiz</h1>
-
+<h3 id="enter-name">
     <label for="user-name" >Please Enter Your Name</label>
+   
     <input id="user-name" type="text" />
+</h3>
 
     <form class="quiz-form">
         <div class="question-container">
@@ -90,10 +92,11 @@
 
 
 </div>
+
+
 </form>
 <button id="submit-button">Submit</button>
-
-<h3 id="score-display"></h3>
+<h2 id="score-display"></h2>
 
 <script src="quiz.js"></script>
 </body>
