--- a/areaoftriangle.html
+++ b/areaoftriangle.html
@@ -9,12 +9,12 @@
 <body>
 
     <nav>
-        <h1 class="heading">  The  Complete Triangle App</h1>
+        <h1 id="heading">  The  Complete Triangle App</h1>
         <br>
-    <a style="font-weight: bolder;" href="index.html">Is It A Triangle? </a>
-    <a href="quiz.html">T-Quiz </a>
-    <a href="hypotenuse.html">T-Hypotenuse</a>
-    <a href="areaoftriangle.html">T-Area </a>
+    <a  href="index.html">Is It A Triangle? </a>
+    <a  href="quiz.html">T-Quiz </a>
+    <a href="hypotenuse.html">Hypotenuse</a>
+    <a href="areaoftriangle.html"  style="font-weight: bolder;">T-Area </a>
     
      </nav>
 
