--- a/areaoftriangle.html
+++ b/areaoftriangle.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="areaoftriangle.css">
     <title>Area of triangle</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
 
     <h1>Area Of Triangle</h1>
 
+
     <label for="">Base(in cm)</label>
     <input type="text" class="area-input" />
 
@@ -30,6 +32,7 @@
 
     <h2 id="output-display"> </h2>
 
+<h2 class="formula">Formula Used:Area of a triangle = 1/2(Base * Height)</h2>
 
     <script src="areaoftriangle.js"></script>
 </body>
