--- a/areaoftriangle.html
+++ b/areaoftriangle.html
@@ -20,16 +20,20 @@
      </nav>
 
     <h1>Area Of Triangle</h1>
+    <div class="input-body">
 
-
+        <div class="angle-input">
     <label for="">Base(in cm)</label>
     <input type="text" class="area-input" />
+</div>
 
+    <div class="angle-input">
     <label for=""> Height(in cm) </label>
     <input type="text" class="area-input" />
+</div>
 
     <button id="calculate-btn"> Calculate </button>
-
+    </div>
     <h2 id="output-display"> </h2>
 
 <h2 class="formula">Formula Used:Area of a triangle = 1/2(Base * Height)</h2>
