--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
         <br>
     <a  href="index.html">Is It A Triangle? </a>
     <a style="font-weight: bolder;" href="quiz.html">T-Quiz </a>
-    <a href="hypotenuse.html">T-Hypotenuse</a>
+    <a href="hypotenuse.html">Hypotenuse</a>
     <a href="areaoftriangle.html">T-Area </a>
     
      </nav>
